@@ -128,6 +128,9 @@ namespace Orthanc
 
 #if BOOST_HAS_DATE_TIME == 1
     std::string GetNowIsoString();
+
+    void GetNowDicom(std::string& date,
+                     std::string& time);
 #endif
 
     // In-place percent-decoding for URL
